--- a/src/week-03/challenges/e03.md
+++ b/src/week-03/challenges/e03.md
@@ -18,7 +18,7 @@ This program must have a start menu where the user must select one of the previo
 When the user enters an incorrect option, a message should be printed saying that the option is not available.
 
 # Solution
-```phyton
+```python
 Algoritmo MultiOption
 	Imprimir "[-----Multi-Option Program-----]";
 	Imprimir "1. Sum two numbers";
