Update md file from challenge 00 of week 05

--- a/src/devguide-challenges/week-05/challenges/e00.md
+++ b/src/devguide-challenges/week-05/challenges/e00.md
@@ -22,7 +22,7 @@ FinAlgoritmo
 
 # Solution
 
-```
+```python
 Funcion result <- timeConverter(input)
 	Definir result Como Caracter
 	Si input >= 0 Entonces
